--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-flask
-bootstrap-flask
-flask-wtf
-flask-sqlalchemy
-flask-migrate
-flask-fontawesome
-python-dateutil
-sqlalchemy
-easyfrenchtax
+Flask==2.1.3
+alembic==1.8.1
+Bootstrap-Flask==2.0.2
+click==8.1.3
+CurrencyConverter==0.17.3
+easyfrenchtax==0.0.2
+Flask-FontAwesome==0.1.5
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.1
+python-dateutil==2.8.2
+six==1.16.0
+SQLAlchemy==1.4.39
+Werkzeug==2.1.2
+WTForms==3.0.1
+pytest
