--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,26 +11,31 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.562.0",
     "pinia": "^3.0.1",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.3.5",
+    "radix-vue": "^1.9.17",
+    "reka-ui": "^2.7.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@primevue/auto-import-resolver": "^4.3.5",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
-    "unplugin-vue-components": "^28.7.0",
+    "shadcn-vue": "^2.4.3",
+    "tw-animate-css": "^1.4.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
