--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,21 +19,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+
     - name: Install dependencies
+      run: uv sync --locked --dev
+
+    - name: Install locales
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        locale -a
+        sudo locale-gen en_GB.UTF-8
+        sudo locale-gen zh_HK.UTF-8
+        sudo locale-gen en_IE.UTF-8
+        sudo locale-gen en_US.UTF-8
+        sudo locale-gen ja_JP.UTF-8
+        sudo update-locale
+        locale -a
+
+    - name: Linting
+      run: uv run ruff check .
+
     - name: Test with pytest
-      run: |
-        pytest
+      run: uv run pytest
